# axiom-rs

./: .clippy.toml  .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yaml  ci.yml
examples/: README.md  cli.rs  ingest-hn.rs
examples/cli/: Cargo.toml  README.md
examples/cli/src/: main.rs
examples/hn-ingest/: Cargo.toml  README.md
examples/ingest-hn/: Cargo.toml  README.md
examples/ingest-hn/src/: main.rs
src/: annotations.rs  client.rs  datasets.rs  error.rs  http.rs  http_async.rs  http_blocking.rs  lib.rs  limits.rs  query_builder.rs  serde.rs  tracing.rs  users.rs
src/annotations/: client.rs  model.rs  requests.rs  tests.rs
src/datasets/: apl.rs  client.rs  mod.rs  model.rs
src/datasets/model/: table.rs
src/users/: client.rs  mod.rs  model.rs
src/version/: client.rs  mod.rs  model.rs
src/virtual_fields/: client.rs  mod.rs  model.rs
tests/: cursor.rs  datasets.rs  tracing.rs  version_test.rs  virtual_fields.rs
