[package]
name = "axiom-rs"
version = "0.8.0"
authors = ["Arne Bahlo <arne@axiom.co>"]
edition = "2018"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "A Rust SDK for Axiom"
homepage = "https://axiom.co"
repository = "https://github.com/axiomhq/axiom-rs"
documentation = "https://docs.rs/axiom-rs/"
keywords = ["axiom", "sdk", "logging", "observability"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_qs = "0.8"
thiserror = "1"
bytes = "1"
flate2 = "1"
http = "0.2"
backoff = { version = "0.4", features = ["futures"] }
url = "2"
tracing = { version = "0.1" }
bitflags = "2"
maybe-async = "0.2.7"

# sync packages
ureq = { version = "2.7.1", optional = true, features = ["json"] }

# async packages
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "sync"] }
tokio-stream = { version = "0.1", optional = true }
async-std = { version = "1", optional = true, features = ["tokio1"] }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json", "stream", "gzip", "blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
serde_test = "1"
async-trait = "0.1"
futures-util = "0.3"
httpmock = "0.6"
structopt = "0.3"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }

[features]
default = ["tokio", "default-tls"]
tokio = ["backoff/tokio", "dep:tokio", "futures", "async-trait", "tokio-stream", "reqwest"]
async-std = ["backoff/async-std", "dep:async-std", "futures", "async-trait", "tokio-stream", "reqwest"]
default-tls = ["reqwest/default-tls", "ureq/tls"]
native-tls = ["reqwest/native-tls", "ureq/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "ureq/rustls"]
blocking = ["ureq", "maybe-async/is_sync"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
