[package]
name = "axiom-rs"
version = "0.12.0"
authors = ["Arne Bahlo <arne@axiom.co>"]
edition = "2018"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "A Rust SDK for Axiom"
homepage = "https://axiom.co"
repository = "https://github.com/axiomhq/axiom-rs"
documentation = "https://docs.rs/axiom-rs/"
keywords = ["axiom", "sdk", "logging", "observability"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
resolver = "2"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "blocking",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_qs = "0.13"
thiserror = "1"
bytes = "1"
flate2 = "1"
http = "1"
backoff = { version = "0.4", features = ["futures"] }
futures = "0.3"
tokio = { version = "1", optional = true, features = ["rt", "sync"] }
async-std = { version = "1", optional = true, features = ["tokio1"] }
url = { version = "2", features = ["serde"] }
tracing = { version = "0.1" }
tokio-stream = "0.1"
bitflags = "2"
bitflags_serde_shim = "0.2.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
test-context = "0.3"
futures-util = "0.3"
httpmock = "0.7"
structopt = "0.3"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
cli-table = "0.4.9"

[features]
default = ["tokio", "default-tls"]
tokio = ["backoff/tokio", "dep:tokio"]
async-std = ["backoff/async-std", "dep:async-std"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
# require a set uo environment variable to run the integration tests
integration-tests = []
