[package]
name = "hn-ingest"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-rs = { path = "../../" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = "0.11"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter"] }
tracing = "0.1"